2006-05-31  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in: Added pl to ALL_LINGUAS

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c: (get_device_info): use only 6 octets for hw-address,
	if the last two are 0

2006-04-25  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.(c|h): add is_no_dummy_device() and make use of it
	* netspeed.c: make use of is_no_dummy_device() instead of checking devices
	manually

2006-02-07  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-10-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (update_applet): correct the text in the tooltip.

2005-07-26  Jörgen Scheibengruber <mfcn@gmx.de>

	* Makefile.am: add distuninstallcheck_listfiles (See 
	http://mail.gnome.org/archives/gnome-doc-list/2003-May/msg00008.html).
	Hopefully that makes make distcheck work;
	remove omf.make xmldocs.make; add CLEANFILES DISTCLEANFILES
	* pixmaps/Makefile.am: add icons_DATA to EXTRA_DIST
	* docs/*/Makefile.am: remove "fig ="
	* remove omf.make xmldocs.make
	* update autogen.sh
	* configure.in: -> 1.13
	* Release version 1.13

2005-07-24  Jörgen Scheibengruber <mfcn@gmx.de>

	* src/backend.c: (redraw_graph): Use black as background color,
	instead of fg[NORMAL]
	* Apply patch of Benoit (makes lot of funcs static).

2005-07-14  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/backend.c:
	* src/netspeed.h: apply forgotten patch from benoit.

2005-07-09  Jörgen Scheibengruber <mfcn@gmx.de>

	* backend.c/.h: (get_default_route): added missing fclose()

2005-07-08  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (timeout_adjust_cb): make use of glib timeout functions 
	instead of deprecated gtk counterparts.

2005-06-15  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* es.po: update Spanish translation 
	(Héctor Enríquez Díaz <henrique@alumnos.ubiobio.cl>)
	
2005-06-07  Jörgen Scheibengruber <mfcn@gmx.de>
