@@ -95,8 +95,8 @@
     </releaseinfo>
     <legalnotice>
       <title>Comentarios</title>
-      <para> Para informar de un defecto o realizar una sugerencia sobre la miniaplicacion  &applet; o el presente
-	manual, envie un correo electronico a <ulink url="mailto:mfcn@gmx.de" type="mail">Jörgen Scheibengruber</ulink>. 
+      <para> Para informar de un defecto o realizar una sugerencia sobre la miniaplicaci&oacute;n  &applet; o el presente
+	manual, env&iacute;e un correo electr&oacute;nico a <ulink url="mailto:mfcn@gmx.de" type="mail">Jörgen Scheibengruber</ulink>. 
       </para>
     </legalnotice>
   </articleinfo>
@@ -132,7 +132,7 @@
       </screenshot>
     </figure>
     <para>
-      <application>&applet;</application> Entrega informaci&oacute;n del tr&aacute;fico de la red sobre un especifico dispositivo, como: eth0, ppp0, plip0, etc. Tambi&eacute;n proporciona informaci&oacute;n sobre la configuraci&oacute;n del dispositivo de la red.
+      <application>&applet;</application> Entrega informaci&oacute;n del tr&aacute;fico de la red sobre un espec&iacute;fico dispositivo, como: eth0, ppp0, plip0, etc. Tambi&eacute;n proporciona informaci&oacute;n sobre la configuraci&oacute;n del dispositivo de la red.
     </para>
     <sect2 id="netspeed-introduction-icons">	
       <title> Iconos de &applet; en el Panel</title>
@@ -213,7 +213,7 @@
     </sect2>
     <sect2>
       <title> Para a&ntilde;adir &applet; al Panel</title>
-      <para>Para a&ntilde;adir &applet; a un panel, haga clic en el bot&oacute;n derecho en el panel y seleccione <menuchoice>
+      <para>Para a&ntilde;adir &applet; a un panel, haga click en el bot&oacute;n derecho en el panel y seleccione <menuchoice>
 	  <guimenu> Agregar al panel</guimenu>
 	  <guisubmenu>Internet</guisubmenu>
 	  <guimenuitem>&applet;</guimenuitem>
@@ -235,11 +235,11 @@
       </screenshot>
     </figure>
     <para>
-      En este dialogo puede cambiar las preferencias de  &applet;:
+      En este di&aacute;logo puede cambiar las preferencias de  &applet;:
     </para>
     <itemizedlist mark="bullet">
       <listitem>
-	<guilabel>Dispositivo de red:</guilabel> Elija el dispositivo de red el cual la miniaplicacion debe monitorear. 
+	<guilabel>Dispositivo de red:</guilabel> Elija el dispositivo de red el cual la miniaplicaci&oacute;n debe monitorear. 
 	 Usualmente todos los dispositivos disponibles se encuentran en la lista, aunque, tambi&eacute;n se puede ingresar uno.
       </listitem>
       <listitem>
@@ -271,14 +271,14 @@
 	  <imageobject><imagedata fileref="figures/details.png" format="PNG"/>
 	  </imageobject>
 	  <textobject>
-	    <phrase>Dialogo de detalles</phrase>
+	    <phrase>Di&aacute;logo de detalles</phrase>
 	  </textobject>
 	</mediaobject>
       </screenshot>
     </figure>
     <para>
       Este dialogo entrega informaci&oacute;n sobre la configuraci&oacute;n del dispositivo de red. 
-      Tambi&eacute;n muestra un grafico con la velocidad de la red.
+      Tambi&eacute;n muestra un gr&aacute;fico con la velocidad de la red.
     </para>
     <itemizedlist mark="bullet">
       <listitem>
@@ -295,7 +295,7 @@
 	<guilabel>Direcci&oacute;n P-t-P:</guilabel> La direcci&oacute;n de internet de  "el otro lado" de su conexion via PPP.
       </listitem>
       <listitem>
-	<guilabel>Bytes de bajada:</guilabel> La cantidad de bytes que su dispositivo de red ha recivido desde que se encuentra conectado.
+	<guilabel>Bytes de bajada:</guilabel> La cantidad de bytes que su dispositivo de red ha recibido desde que se encuentra conectado.
       </listitem>
       <listitem>
 	<guilabel>Bytes de subida:</guilabel> La cantidad de bytes que su dispositivo de red ha enviado desde que se encuentra conectado.
