@@ -1,3 +1,8 @@
+2006-06-17  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
+
+	* docs/es/netspeed_applet.xml: correct a couple of details on
+	the Spanish documentation.
+
 2006-05-31  Jörgen Scheibengruber <mfcn@gmx.de>
 
 	* configure.in: Added pl to ALL_LINGUAS
